[Java] More `--add-opens java.base/jdk.internal.misc=ALL-UNNAMED`.