@@ -29,23 +29,6 @@ set JAVA_OPTIONS=^
   -XX:GuaranteedSafepointInterval=300000 ^
   -XX:+UseParallelGC
 
-FOR /F "tokens=3" %%J IN ('"%JAVA_HOME%\bin\java" -version 2^>^&1 ^| findstr version') DO (
-  SET "java_version=%%J"
-  SET "java_version=!java_version:"=!"
-)
-
-if "!java_version:~0,3!" == "1.8" (
-  set "ADD_OPENS="
-) else (
-  FOR /F "tokens=1 delims=.-" %%A IN ("!java_version!") DO (
-    SET major_java_version=%%A
-  )
-
-  if !major_java_version! LSS 15 (
-    set "JAVA_OPTIONS=!JAVA_OPTIONS! -XX:+UseBiasedLocking -XX:BiasedLockingStartupDelay=0"
-  )
-
-  set ADD_OPENS=^
-  --add-opens java.base/sun.nio.ch=ALL-UNNAMED ^
-  --add-opens java.base/java.util.zip=ALL-UNNAMED
-)
+set ADD_OPENS=^
+--add-opens java.base/jdk.internal.misc=ALL-UNNAMED ^
+--add-opens java.base/java.util.zip=ALL-UNNAMED
